--- a/notebook_unit1.ipynb
+++ b/notebook_unit1.ipynb
@@ -95,9 +95,9 @@
    "source": [
     "# Start of the analysis notebook\n",
     "\n",
-    "**Author : Your Name**  \n",
-    "*Date : The date you started working on this*  \n",
-    "*Affiliation : The entity under whose name you are working on this*  \n",
+    "**Author : Cheng Luo**  \n",
+    "*Date : 01.03.2022*  \n",
+    "*Affiliation : myself*  \n",
     "\n",
     "Place the required modules in the top, followed by required constants and global functions."
    ]
@@ -108,7 +108,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# required modules"
+    "# required modules\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -375,7 +379,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define some global functions"
+    "# define some global functions\n",
+    "\n",
+    "#discrete fourier transform"
    ]
   },
   {
@@ -391,7 +397,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read and plot efield.t"
+    "# read and plot efield.t\n",
+    "\n",
+    "pd.set_option('display.float_format', '{:.10f}'.format)\n",
+    "\n",
+    "data = pd.read_csv('data/efield.t', '\\s+')#,header=None, skiprows=1)\n",
+    "\n",
+    "x = data['time']\n",
+    "y = data['y']\n",
+    "\n",
+    "#plotting\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(10,8))\n",
+    "\n",
+    "ax.plot(x, y)\n",
+    "\n",
+    "plt.plot()"
    ]
   },
   {
@@ -407,7 +428,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# discard the columns with variance below threshold - these are considered constant"
+    "# discard the columns with variance below threshold - these are considered constant\n",
+    "\n",
+    "newdata = data.drop(['x', 'z'], axis=1)\n",
+    "#also possible:\n",
+    "#newdata = data.drop(columns=['x', 'z'])\n"
    ]
   },
   {
@@ -416,7 +441,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# discrete Fourier transform of the remaining column: You only need the real frequencies"
+    "# discrete Fourier transform of the remaining column: You only need the real frequencies\n"
    ]
   },
   {
@@ -539,7 +564,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -553,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
