--- a/notebook_unit1.ipynb
+++ b/notebook_unit1.ipynb
@@ -112,7 +112,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from scipy import fft"
    ]
   },
   {
@@ -381,7 +382,7 @@
    "source": [
     "# define some global functions\n",
     "\n",
-    "#discrete fourier transform"
+    "#discrete fourier transform\n"
    ]
   },
   {
@@ -457,7 +458,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot your results"
+    "# plot your results\n",
+    "\n",
+    "#plt.savefig()"
    ]
   },
   {
@@ -478,7 +481,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read in as numpy array"
+    "# read in as numpy array\n",
+    "\n",
+    "nstate = np.loadtxt('data/nstate_i.t')"
    ]
   },
   {
